<resources>
    <string name="app_name">Words</string>
    <string name="hint_word">Word...</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="button_save">Save</string>
    <string name="word_description">This text view is going to provide a description. I\'m not sure if it is actually going to provide a description of the word seems like that may not goes as planed.</string>
    <string name="Toast_no_word">No word entered</string>
    <string name="delete_words">Delete Words</string>
    <string name="restore_list">Restore List</string>
    <string name="dark_mode_on">Dark Mode: ON </string>
    <string name="dark_mode_off">Dark Mode: OFF</string>
    <string name="snackbar_delete_canceled">Delete all words canceled.</string>
    <string name="snackbar_restore_canceled">Restore List canceled</string>
    <string name="dialog_restore_message">This action will restore all the default words</string>
    <string name="dialog_restore_title">Restore List</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="dialog_delete_message">Are you sure you want to remove all Words</string>
    <string name="dialog_delete_title">Delete all Words</string>
    <string name="description_test">THIS a  test</string>
</resources>