<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="binding"
            type="com.example.words.main.fragments.wordlist.WordListFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/WordListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.fragments.wordlist.WordListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/word_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/teal_200"
            android:onClick="@{()-> binding.fabNewWord()}"
            android:src="@drawable/ic_baseline_add_24"
            android:transitionName="savedWordTransition"
            app:backgroundTint="@color/material_on_surface_emphasis_high_type"
            app:borderWidth="4dp"
            app:layout_behavior=".main.fragments.wordlist.ui.FABBehavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>