...
            app:destination="@id/dest_restoreWordListDialog" />

    </fragment>
    <fragment
        android:id="@+id/dest_newWordFragment"
        android:name="com.example.words.main.fragments.newword.NewWordFragment"
        android:label="NewWordFragment"
        tools:layout="@layout/fragment_new_word"/>
    <fragment
        android:id="@+id/dest_detailsFragment"
        android:name="com.example.words.main.fragments.details.DetailsFragment"
        android:label="Word Details"
        tools:layout="@layout/fragment_details">
...
